# slogger

./: .gitignore  .project-settings.yml  Demo.hs  Demo2.hs  Design.md  LICENSE  LogFunc.hs  README.md  Selector.hs  Slog.hs  Slogger.hs  TypedData.hs  Types.hs  slogger.cabal
deadcode/: OldSlogger.hs  Slogger.hs
examples/: JsonExample.hs
src/: Slogger.hs
src/Slogger/: Types.hs
