name:              slogger
version:           0.0.0
synopsis:          Structured logger
description:       TODO
license:           BSD3
license-file:      LICENSE
author:            Michael Sloan
maintainer:        Michael Sloan <mgsloan at gmail>
homepage:          http://github.com/mgsloan/slogger
bug-reports:       http://github.com/mgsloan/slogger/issues
category:          Logging
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
source-repository head
  type: git
  location: git://github.com/mgsloan/slogger

library
    hs-source-dirs: src
    ghc-options: -Wall
    exposed-modules: Slogger
                     Slogger.Types
    build-depends: base
                 , aeson
                 , bytestring
                 , fast-logger
                 , iso8601-time
                 , monad-logger >= 0.3.10
                 , text
                 , th-orphans >= 0.11
                 , time
                 , unordered-containers
                 , transformers
                 , template-haskell
